# webintel

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: api-reference.html  examples.html  index.html  installation.html
webintel/: __init__.py  advanced_search_engine.py  ai_engine.py  cli.py
webintel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
